# gr-out-of-tree-project

./: AUTHORS  CMakeLists.txt  README  gnuradio-out_of_tree.pc.in
apps/: CMakeLists.txt
grc/: CMakeLists.txt
lib/: CMakeLists.txt  qa_out_of_tree.cc  qa_out_of_tree.h  test_runner.cc
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  __init__.py  out_of_tree.i
