INCLUDE(FindSWIG)
#TODO check SWIG_FOUND

IF(SWIG_FOUND)
INCLUDE(FindPythonInterp)
#TODO check PYTHONINTERP_FOUND

EXECUTE_PROCESS(
    COMMAND ${PYTHON_EXECUTABLE} -c "from distutils import sysconfig; print sysconfig.get_python_lib(prefix='${CMAKE_INSTALL_PREFIX}')"
    OUTPUT_VARIABLE PYTHON_DIR OUTPUT_STRIP_TRAILING_WHITESPACE
)

INCLUDE(FindPythonLibs)
#TODO check PYTHONLIBS_FOUND

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
LINK_DIRECTORIES(${PYTHON_LIBRARY_DIRS})

INCLUDE(UseSWIG)

SET(SWIG_FLAGS_INCLUDE_DIRS
    ${GNURADIO_CORE_INCLUDE_DIRS}
    ${GNURADIO_CORE_INCLUDE_DIRS}/swig
    ${GNURADIO_CORE_INCLUDE_DIRS}/gnuradio/swig
    ${Boost_INCLUDE_DIRS}
    ${UHD_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}/swig
)

SET(CMAKE_SWIG_FLAGS -fvirtual -modern -keyword -w511 -module out_of_tree_swig)

FOREACH(swig_include_dir ${SWIG_FLAGS_INCLUDE_DIRS})
    LIST(APPEND CMAKE_SWIG_FLAGS "-I${swig_include_dir}")
ENDFOREACH(swig_include_dir)

SET_SOURCE_FILES_PROPERTIES(out_of_tree.i PROPERTIES CPLUSPLUS ON)

#TODO Find out how to do this without ${CMAKE_BINARY_DIR}
SWIG_ADD_MODULE(out_of_tree_swig python out_of_tree.i)
SWIG_LINK_LIBRARIES(out_of_tree_swig gnuradio-out_of_tree ${GNURADIO_CORE_LIBRARIES} ${PYTHON_LIBRARIES})


INSTALL(TARGETS ${SWIG_MODULE_out_of_tree_swig_REAL_NAME}
    LIBRARY DESTINATION ${PYTHON_DIR}/out_of_tree # .so file
    ARCHIVE DESTINATION ${PYTHON_DIR}/out_of_tree # .lib file
    RUNTIME DESTINATION ${PYTHON_DIR}/out_of_tree # .dll file
)

INSTALL(FILES ${CMAKE_BINARY_DIR}/swig/out_of_tree_swig.py DESTINATION ${PYTHON_DIR}/out_of_tree)
FILE(GLOB DOT_I_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.i)
INSTALL(FILES ${DOT_I_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/out_of_tree/swig)

ENDIF(SWIG_FOUND)
